--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <body>
         <div id="app"></div>
         <script src="bundle.js"></script>
-    </body>
+    <script type="text/javascript" src="/runtime.9658758058d81a3bf3c3.js"></script><script type="text/javascript" src="/vendors.800115b3baf30c6d50b2.js"></script><script type="text/javascript" src="/main.ac3a74ffc285230225b7.js"></script></body>
 </html>
