fix gh-page url

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Funbox test task</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body>
-        <div id="app"></div>
-        <script src="bundle.js"></script>
-    <script type="text/javascript" src="runtime.9658758058d81a3bf3c3.js"></script><script type="text/javascript" src="vendors.800115b3baf30c6d50b2.js"></script><script type="text/javascript" src="main.ac3a74ffc285230225b7.js"></script></body>
-</html>
+<!doctype html><html><head><title>Funbox test task</title><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"/></head><body><div id="app"></div><script type="text/javascript" src="/funbox_test_task/runtime.60ae8ab985ea676dae55.js"></script><script type="text/javascript" src="/funbox_test_task/vendors.11b39b7a27aab612d641.js"></script><script type="text/javascript" src="/funbox_test_task/main.f45d3456263f70d567e7.js"></script></body></html>
